Changing getFirst() to get() call